<resources>
    <string name="app_name">MediWatch</string>
    <string name="powered_by_esp">Desarrollado por MediWatch</string>
    <string name="app_version">Versión de la App</string>
    <string name="device_type_ble">ESP BLE PROV</string>
    <string name="device_type_softap">ESP SoftAP PROV</string>
    <string name="device_type_both">BLE + SoftAP</string>
    <string name="title_activity_connect_device">Conectar al Dispositivo</string>
    <string name="title_activity_pop">Prueba de Posesión</string>
    <string name="title_activity_wifi_scan_list">Seleccionar Red Wi-Fi</string>
    <string name="title_activity_wifi_config">Configuración Wi-Fi</string>
    <string name="title_activity_thread_config">Configuración de Red Thread</string>
    <string name="title_activity_provisioning">Aprovisionamiento</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="title_activity_add_device">Añadir Dispositivo</string>
    <string name="provisioning_title">Aprovisionamiento ESP</string>
    <string name="btn_ok">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_back">Atrás</string>
    <string name="btn_provision">Aprovisionar</string>
    <string name="btn_provision_device">Aprovisionar nuevo dispositivo</string>
    <string name="btn_connect">Conectar</string>
    <string name="btn_connecting">Conectando&#8230;</string>
    <string name="btn_wifi_settings">Ir a configuración Wi-Fi</string>
    <string name="btn_scan_again">Escanear de nuevo</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_change_prefix">Cambiar</string>
    <string name="btn_yes">Sí</string>
    <string name="btn_get_permission">Obtener permiso</string>
    <string name="btn_try_again">Intentar de nuevo</string>
    <string name="enviar">Enviar</string>
    <string name="hint_pop">Prueba de posesión</string>
    <string name="hint_ssid">Nombre de red</string>
    <string name="hint_value">Ingresar valor</string>
    <string name="hint_password">Contraseña</string>
    <string name="pop_instruction">Ingrese su PIN de prueba de posesión para</string>
    <string name="setup_instructions">Para completar la configuración de su dispositivo %1$s, por favor proporcione las credenciales de su Red Doméstica.</string>
    <string name="connect_device_instruction_general">Para aprovisionar su dispositivo, asegúrese de que esté encendido. Conecte su teléfono móvil a la red Wi-Fi con un nombre como PROV_XXXXXX</string>
    <string name="connect_device_instruction_specific">Para aprovisionar su dispositivo, asegúrese de que esté encendido. Conecte su teléfono móvil a la red Wi-Fi con el nombre</string>
    <string name="prov_step_1">Enviando credenciales Wi-Fi</string>
    <string name="prov_step_2">Aplicando conexión Wi-Fi</string>
    <string name="prov_step_3">Verificando estado de aprovisionamiento</string>
    <string name="error_session_creation">Error al crear sesión</string>
    <string name="error_prov_step_1">Error al enviar credenciales Wi-Fi</string>
    <string name="error_prov_step_2">Error al aplicar credenciales Wi-Fi</string>
    <string name="error_prov_step_3">Error al aprovisionar dispositivo</string>
    <string name="error_prov_thread_step_1">Error al enviar credenciales Thread</string>
    <string name="error_prov_thread_step_2">Error al aplicar credenciales Thread</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_provision_landing">Conectar al dispositivo</string>
    <string name="connected_to_device_instructions">Ahora está conectado al dispositivo. Para aprovisionar el dispositivo, por favor ingrese las credenciales de su Red en la siguiente página.</string>
    <string name="no_internet_note">Para asegurarse de que realmente está conectado al dispositivo, por favor acepte el diálogo del sistema que le informa que la red no tiene acceso a internet.</string>
    <string name="connect_to_device_action">Conectar</string>
    <string name="connected_to_device_action">Aprovisionar Red</string>
    <string name="title_activity_provision_instructions">Instrucciones de Aprovisionamiento</string>
    <string name="ssid_hint_text">Nombre de red</string>
    <string name="password_hint_text">Contraseña</string>
    <string name="provision">Aprovisionar</string>
    <string name="success_text">¡El dispositivo ha sido aprovisionado con éxito!</string>
    <string name="wifi_disconnected_text">Por favor, verifique los indicadores del dispositivo para el estado de aprovisionamiento.</string>
    <string name="done">Hecho</string>
    <string name="enable_bluetooth_instructions">Para aprovisionar su nuevo dispositivo, asegúrese de que el Bluetooth de su teléfono esté encendido y dentro del alcance de su nuevo dispositivo.</string>
    <string name="enabled_bluetooth_instructions">Para aprovisionar el dispositivo, por favor ingrese las credenciales de su Red en la siguiente página.</string>
    <string name="enable_bluetooth_action">Habilitar</string>
    <string name="enabled_bluetooth_action">Aprovisionar Red</string>
    <string name="progress_scanning">Escaneando Dispositivos...</string>
    <string name="progress_get_status">Obteniendo Estado</string>
    <string name="progress_loading">Cargando...</string>
    <string name="progress_thread_networks">Buscando redes\nThread...</string>
    <string name="error_title">¡Error!</string>
    <string name="error_ble_not_supported">¡Lo sentimos! BLE no es compatible.</string>
    <string name="error_bluetooth_not_supported">¡Lo sentimos! Bluetooth no es compatible.</string>
    <string name="error_device_not_supported">Falló la comunicación. Es posible que el dispositivo no sea compatible.</string>
    <string name="error_device_transport_not_supported">Es posible que el dispositivo no sea compatible.</string>
    <string name="error_network_not_found">Red no encontrada.</string>
    <string name="error_authentication_failed">Falló la autenticación Wi-Fi.</string>
    <string name="error_unknown">El aprovisionamiento del dispositivo falló. Motivo: Desconocido.</string>
    <string name="error_pop_incorrect">Por favor, vuelva a intentarlo con el PIN de prueba de posesión correcto.</string>
    <string name="error_no_ble_device">¡No se encontraron dispositivos Bluetooth!</string>
    <string name="error_device_connect_failed">Error al conectar con el dispositivo.</string>
    <string name="error_ssid_empty">El nombre de la red no puede estar vacío</string>
    <string name="error_password_empty">La contraseña no puede estar vacía</string>
    <string name="error_provisioning">Restablezca su placa a los valores de fábrica e inténtelo de nuevo</string>
    <string name="error_wifi_off">Por favor, encienda el Wi-Fi para conectarse con el dispositivo.</string>
    <string name="error_security_mismatch">La seguridad aplicada para comunicarse con el dispositivo no coincide con la configuración</string>
    <string name="error_location_permission">No se ha dado permiso de ubicación. Será necesario para añadir dispositivos BLE o SoftAP.</string>
    <string name="error_no_preferred_creds">No se ha añadido ninguna red thread</string>
    <string name="error_read_preferred_creds_request_denied">Ha denegado la solicitud para leer credenciales thread</string>
    <string name="error_no_thread_network">No hay Router Fronterizo Thread Activo</string>
    <string name="error_dataset_invalid">Conjunto de datos inválido</string>
    <string name="error_nearby_devices_permission">No se ha concedido permiso para dispositivos cercanos. Esto es necesario para escanear y conectarse a dispositivos BLE.</string>
    <string name="prefix">Prefijo:</string>
    <string name="hint_prefix">Ingresar Prefijo</string>
    <string name="hint_key">Ingresar PIN</string>
    <string name="devices_title">Dispositivos</string>
    <string name="enter_device_key">Ingrese Su PIN de Prueba de Posesión</string>
    <string name="join_other_network">Unirse a Otra Red</string>
    <string name="networks">Redes</string>
    <string name="connect_your_device">Conectar a su dispositivo</string>
    <string name="dialog_title_camera_permission">Se Necesita Permiso de Cámara</string>
    <string name="dialog_title_location_permission">Se Necesita Permiso de Ubicación</string>
    <string name="dialog_msg_location_permission_use">Es necesario para conectar dispositivos Bluetooth cercanos.</string>
    <string name="dialog_title_nearby_devices_permission">Permiso de Dispositivos Cercanos</string>
    <string name="dialog_msg_nearby_devices_permission_use">El permiso de Dispositivos Cercanos es necesario para escanear y conectarse a dispositivos BLE. Por favor, concédalo en Configuración.</string>
    <string name="dialog_title_location">Ubicación requerida</string>
    <string name="dialog_title_disconnect">Desconexión</string>
    <string name="title_searching">Buscando dispositivo</string>
    <string name="title_no_device">Dispositivo no encontrado</string>
    <string name="title_device_recovery">Recuperar Dispositivo</string>
    <string name="dialog_title_device_type">Seleccionar Tipo de Dispositivo</string>
    <string name="dialog_msg_device_selection">Seleccionar Tipo de Dispositivo</string>
    <string name="dialog_title_network_info">Ingresar Información de Red</string>
    <string name="dialog_msg_ble_device_disconnection">Dispositivo desconectado</string>
    <string name="dialog_msg_gps">La ubicación es necesaria para buscar dispositivos BLE. ¿Desea activarla?</string>
    <string name="dialog_msg_disconnect">El dispositivo se ha desconectado inesperadamente</string>
    <string name="dialog_msg_select_device_type">¿Cómo desea conectarse a su dispositivo ESP32?</string>
    <string name="message_searching_device">Buscando dispositivos MediWatch conectados...</string>
    <string name="message_no_device_found">No se detectó ningún dispositivo MediWatch conectado a la red. ¿Qué deseas hacer?</string>
    <string name="msg_search_existing_device">Buscar un dispositivo MediWatch ya configurado en la red</string>
    <string name="device_settings">Configuración del Dispositivo</string>
    <string name="device_selection_title">Tipos de Dispositivos Compatibles</string>
    <string name="security_selection_title">Comunicación Encriptada</string>
    <string name="username_wifi_pref_title">Nombre de Usuario Sec2 para Wi-Fi</string>
    <string name="username_thread_pref_title">Nombre de Usuario Sec2 para Thread</string>
    <string name="username_selection_title">Nombre de Usuario</string>
    <string name="summary_secured">Seguro</string>
    <string name="summary_unsecured">No Seguro</string>
    <string name="summary_username">(Aplicable para la versión de seguridad 2)</string>
    <string name="mqtt_dashboard">MQTT Dashboard</string>
    <string name="mqttName">MediWatch MQTT</string>
    <string name="estado_mqtt">Estado: Desconectado</string>
    <string name="datos_recibidos">Datos recibidos:</string>
    <string name="esperando_datos">Esperando datos...</string>
    <string name="enviar_comando">Enviar comando:</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje</string>
    <string name="Topicos">Tópico de suscripción: /device/status\nTópico de publicación: /device/commands\nTópico de heartbeat: /device/heartbeat</string>
    <string name="retry">Volver a Provisioning</string>
    <string name="Monitoreo">Conecta tu dispositivo ESP32 para comenzar a monitorear en tiempo real</string>
    <string name="Con_Dis">Conectar Dispositivo</string>
    <string name="Configurado">¿Ya tiene un dispositivo configurado?</string>
    <string name="btn_search_device">Buscar Dispositivo</string>
</resources>